# cportal-sc

./: .gitignore  Dockerfile  README.md
data/: assetpolicy.yaml  rolepolicy.yaml
data/preview/: assetpolicy.yaml  rolepolicy.yaml
src/mint68/: README.md  cabal.project  mint68.cabal
src/mint68/app/: Main.hs
src/mint68/ledger/: datum0.json  datum1.json  give.sh  grab.sh  mint.plutus  mint.sh  mint_1.hex  mint_1.plutus  mint_SignAndSubmit.sh  mint_bak1.sh  mint_bak2.sh  mint_execute_only_once.sh  mint_txbuild.sh  oref1.tmp  oref1a.tmp  oref1b.tmp  platform-params.json  refTokenName.hex  registry.addr  registry.plutus  seventeen.json  toy.addr  toy.plutus  tx.body  tx.signed  usrTokenName.hex  wallet1.addr  wallet1.pkh  wallet1.skey  wallet1.vkey  wallet2.addr  wallet2.skey  wallet2.vkey
src/mint68/ledger/old_wallets/: wallet1.addr  wallet1.skey  wallet1.vkey  wallet2.addr  wallet2.skey  wallet2.vkey
src/mint68/ledger/xiv.ar/: old_mint_v02.plutus  old_mint_v02.policy  old_policy-params.json  old_registry.addr  old_registry_v02.plutus
src/mint68/src/: Config.hs  Deploy.hs  Instances.hs  Minting.hs  Params.hs  Registry.hs
src/toySC/: README.md  toySC.cabal
src/toySC-deploy/: README.md  cabal.project  toySC.cabal
src/toySC-deploy/ledger/: oref1.tmp  tx.body  wallet2.vkey
src/toySC-deploy/src/: Deploy.hs  ToySC.hs
src/toySC-emulator/: toySC.cabal
src/toySC-emulator/src/: OffChain.hs
src/toySC-unitTest/: toySC.cabal
src/toySC-unitTest/src/: OffChain.hs  ToySC.hs
src/toySC-unitTest/test/: Spec.hs
src/toySC-unitTest/test/Spec/: Trace.hs
src/toySC/ledger/: fund_wallet2.sh  oref2.tmp  orefSc.tmp  tx.signed  wallet2.addr
src/toySC/src/: Test.hs
