cabal-version:      3.0
name:               toySC
version:            0.1.0.0
synopsis:           Very basic example of a plutus contract
stability:          experimental

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

license:        Apache-2.0
license-files:  LICENSE
author:         Antonio Hernández-Garduño
maintainer:     antoniohg@me.com
                    
-- A copyright notice.
-- copyright:
category:       Blockchain
-- extra-source-files: CHANGELOG.md

flag defer-plugin-errors
    description:
        Defer errors from the plugin, useful for things like Haddock that can't handle it.
    default: False
    manual: True

common lang
    default-language:   Haskell2010
    ghc-options:
      -Wall -Wnoncanonical-monad-instances
      -Wincomplete-uni-patterns -Wincomplete-record-updates
      -Wredundant-constraints -Widentities -rtsopts
      -- See Plutus Tx readme
      -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
    if flag(defer-plugin-errors)
        ghc-options: -fplugin-opt PlutusTx.Plugin:defer-errors

library
    import: lang
    
    hs-source-dirs: src

    exposed-modules: OffChain, ToySC

    build-depends:
      base >= 4.9 && < 5,
      aeson -any,
      bytestring -any,
      containers -any,
      freer-extras -any,
      playground-common -any,
      plutus-contract -any,
      plutus-ledger -any,
      plutus-ledger-api -any,
      plutus-ledger-constraints -any,
      plutus-tx -any,
      plutus-tx-plugin -any,
      plutus-script-utils -any,
      text -any,
      lens -any,
      cardano-api, 
      cardano-binary,
      --additionals
      serialise -any,
      base16-bytestring,
      data-default,
      openapi3

test-suite toySC-tests
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  hs-source-dirs: test
  other-modules:       Spec.Trace
  default-language: Haskell2010
  ghc-options:         -Wall -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas
  build-depends:       base ^>=4.14.1.0
                     , containers
                     , data-default
                     , freer-extras
                     , lens
                     , plutus-contract
                     , plutus-ledger
                     , toySC
                     , plutus-tx
                     , QuickCheck
                     , tasty
                     , tasty-hunit
                     , tasty-quickcheck
                     , text
  if !(impl(ghcjs) || os(ghcjs))
    build-depends: plutus-tx-plugin -any
